# bvex-link

./: .gitignore  .gitmodules  README.md  annotated.html  annotated_dup.js  bug.html  classMyLibrary_1_1Example-members.html  classMyLibrary_1_1Example.html  classMyLibrary_1_1SecondExample-members.html  classMyLibrary_1_1SecondExample.html  classMyLibrary_1_1SubclassExample-members.html  classMyLibrary_1_1SubclassExample.html  classes.html  command-compose.yml  command__server_8h.html  command__server_8h_source.html  common_8h_source.html  connected__udp__socket_8h.html  connected__udp__socket_8h_source.html  deprecated.html  dir_000000_000002.html  dir_000002_000005.html  dir_000003_000001.html  dir_000005_000002.html  dir_000008_000005.html  dir_000009_000005.html  dir_1a55803d4667afd0b5d398f378b65f85.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_737c939f4ae96c2dd4bcfc95192e6b20.html  dir_737c939f4ae96c2dd4bcfc95192e6b20_dep.map  dir_accc225023675783ee9945f267dee27b.html  dir_ba86a88b42f40f37f9699a5ec6affb57.html  dir_ba86a88b42f40f37f9699a5ec6affb57_dep.map  (+128 more)
bcp-fetch-client/: CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  bcp-fetch-config.cmake.in  py-install.sh
bcp-fetch-client/examples/: request_consumer_example.c
bcp-fetch-client/gtest/: connected_udp_socket.cpp  request_sample.cpp  send_sample.cpp
bcp-fetch-client/include/: command_server.h  connected_udp_socket.h  file_sender.h  primitive_sender.h  request_sample.h  sample_sender.h  send_sample.h
bcp-fetch-client/python-bindings/: .gitignore  README.md  setup.py
bcp-fetch-client/python-bindings/tests/: test_sample_sender.py
bcp-fetch-client/src/: command_server.c  request_sample.c  sample.c  sample.h  send_sample.c  send_telemetry.c  socket.c
bcp-fetch-client/src/send_sample/: file_sender.c  primitive_sender.c  sample_sender.c  sample_sender_utils.c  sample_sender_utils.h
bcp-fetch-client/test_common/: test_server.hpp
bcp-fetch-client/tests/: main.c  test_file.c  test_file.h  test_loop.c  test_loop_send_time.c  test_loop_send_time.h  test_n_samples.c  test_one.c  test_request.c  test_request.h
bcp-fetch-client/tests/command_client/: test_client.c
bcp-fetch-client/tests/command_server/: main.c
bcp-fetch-client/tests/common/: README.md  data.h
bcp-fetch-client/tests/gtest/: request_sample.cpp  send_sample.cpp
bcp-fetch-client/tests/send_sample/: main.c
bcp-redis-client/c/: CMakeLists.txt
bcp-redis-client/c/include/: codec.h
bcp-redis-client/c/src/: base64.hpp  codec.c  codec.cpp  codec.hpp
bcp-redis-client/python/: .gitignore  README.md  pyproject.toml  requirements.txt
bcp-redis-client/python/test/: test_sample.py
bcp-redis-client/python/tests/: test_get_all_metric_ids.py  test_sample_file.py
controller-sim/: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  generate-sampling-config  generate_nanopb_headers  sample.proto
controller-sim/cmake/: Findhiredis.cmake
controller-sim/src/: async_send_socket.c  async_send_socket.h  common.c  common.h  main.c  protobuf.c  protobuf.h  test_send.c
controller-sim/tests/: main.c  test_loop.h  test_spam.c
onboard-link/: .gitignore  CMakeLists.txt  Doxyfile  README.md  daytime-async-tcp-server.cpp  daytime-udp.cpp  echo.cpp  generate-sample-pb-headers  reference_counted.cpp  sync-daytime-tcp-server.cpp  temp_reading.h  test-asio.cpp  vcpkg.json
onboard-link/src/: command.cpp  command.hpp  main.cpp  recv_server.cpp  recv_server.hpp  recv_uplink_sample_server.cpp  recv_uplink_sample_server.hpp  sample.cpp  sample.hpp  send_server.cpp  send_server.hpp  telemetry.cpp  telemetry.hpp  temp_reading.cpp
onboard-link/src/decode_onboard_telemetry/: decode_sample_pb.cpp  decode_sample_pb.hpp
onboard-link/src/decode_payload/: decode_sample_pb.cpp  decode_sample_pb.hpp
onboard-link/src/encode_downlink_telemetry/: make_sample_frame.cpp  serialize_segment.cpp  serialize_segment.hpp  size_constants.hpp
onboard-link/src/server/: recv_server.cpp  recv_server.hpp  recv_uplink_sample_server.hpp  send_server.cpp  send_server.hpp
onboard-link/src/utils/: chunker.hpp  sample_transmitter.cpp  sample_transmitter.hpp
onboard-server/: CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  compiler-flags  vcpkg.json
onboard-server/src/: command.cpp  command.hpp  main.cpp  sample.cpp  sample.hpp  telemetry.cpp  telemetry.hpp
onboard-server/src/decode_onboard_telemetry/: decode_sample_pb.cpp  decode_sample_pb.hpp
onboard-server/src/encode_downlink_telemetry/: encode_file.cpp  encode_file.hpp  encode_primitive.cpp  encode_primitive.hpp  encode_sample_frame.cpp  encode_sample_frame.hpp  make_sample_frame.hpp  serialize_nanopb_struct.cpp  serialize_nanopb_struct.hpp  serialize_segment.cpp  serialize_segment.hpp  size_constants.hpp
onboard-server/src/server/: onboard_telemetry_recv_server.cpp  onboard_telemetry_recv_server.hpp  recv_server.cpp  recv_server.hpp  recv_uplink_sample_server.cpp  recv_uplink_sample_server.hpp  send_server.cpp  (+5 more)
onboard-telemetry-client/: CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  primitive.proto  request.proto  response.proto  sample.proto
onboard-telemetry-client/include/: request.h  request_sample.h  send_sample.h  send_telemetry.h  socket.h
onboard-telemetry-client/src/: request.c  send_telemetry.c  socket.c
onboard-telemetry-client/tests/: main.c  test_loop.h  test_loop_send_time.c  test_n_samples.h  test_one.c  test_one.h
telemetry-uplink/: .gitignore  CMakeLists.txt  README.md  sample.proto  vcpkg.json
telemetry-uplink/include/: send_telemetry.h  socket.h
telemetry-uplink/src/: send_telemetry.c  socket.c
telemetry-uplink/tests/: main.c  test_loop.c  test_loop.h  test_n_samples.c  test_one.c  test_pthread.c  test_pthread.h  test_spam.h
(+191 files in other folders)
