[project]
name = "bcp-redis-client"
version = "0.1.0"
description = "A Redis client for BCP"
authors = [
    { name = "Oliver", email = "oliver@example.com" },
]
dependencies = [
    "redis>=5.0.0",
    "pytest>=7.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bcp_redis_client"]
